Backend and Frontend updates
Added Java backend and more features in the JS front end

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Red+Hat+Display&family=Work+Sans&display=swap');
+
 .App {
   text-align: center;
 }
